[package]
name = "jarss"
authors = ["Jarred Allen <jarredallen73@gmail.com>"]
repository = "https://github.com/JarredAllen/jarss"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.8"
feed-rs = "2.3.1"
http = "1.3.1"
log = "0.4.27"
lz4_flex = "0.11.3"
postcard = { version = "1.1.1", features = ["use-std"] }
serde = { version = "1.0.219", features = ["derive"] }
tera = "1.20.0"
toml = "0.8.20"
ureq = "3.0.11"
